# send_to_inj_burn_auction

./: Cargo.toml  build_release.sh  readme.md
src/: contract.rs  error.rs  lib.rs  msg.rs  querier.rs  state.rs  tests.rs
