[package]
name = "send_to_inj_burn_auction"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
cw2                  = { version = "2.0.0" }
cw20                 = { version = "2.0.0" } 
cw20-base            = { version = "2.0.0" }
cosmwasm-schema      = { version = "1.5.0" }
cosmwasm-std         = { version = "2.1.0", features = [ "abort", "cosmwasm_1_2", "cosmwasm_1_3", "cosmwasm_1_4", "cosmwasm_2_0", "iterator", "stargate" ] }
cosmwasm-storage     = { version = "1.5.2", features = [ "iterator" ] }
cw-storage-plus      = { version = "2.0.0" }
injective-cosmwasm   = { version = "0.3.1" }
injective-math       = { version = "0.3.0" }
injective-std        = { version = "1.13.2" }
injective-std-derive = { version = "1.13.0" }

schemars             = { version = "0.8.16" }
serde                = { version = "1.0.196", default-features = false, features = [ "derive" ] }
serde-cw-value       = { version = "0.7.0" }
serde-json-wasm      = { version = "1.0.0" }
serde_json           = { version = "1.0.111" }
serde_repr           = { version = "0.1.17" }
serde_test           = { version = "1.0.176" }

thiserror            = { version = "1.0.56" }
protobuf             = { version = "2", features = ["with-bytes"] }

hex                  = { version = "0.4.3" }

[dev-dependencies]
cw-multi-test        = { version = "2.2.0" }


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"